[package]
name = "merkle-trees-cry4"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Implementation of Merkle trees with one time signatures as leafs"
repository = "https://github.com/CRY4-Hash-Based-Signatures/Merkle-Trees"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
one-time-signatures-cry4 = "0.1.0"
sha2 = "0.10.2"

rand = { version = "0.8.5", optional = true }
itertools = { version = "0.10.3", optional = true }


[features]
build-binary = ["rand", "itertools"]

[[bin]]
name = "benchmark"
required-features = ["build-binary"]